# Discord-Bots

./: .gitignore  L4d_Scream-G-ogxxcSZhM.m4a  README.md  question_mark_ping_spam_League_of_legends_green_screen_effect-T6dvKYZ7enU.m4a  requirements.txt
Bad Grouper/: README.md  badgrouperpy.py  bot_gen_utils.py  botdesignscratch.txt  keep_alive.py  main.py
Bad Grouper/cogs/: badgrouper.py  cmdutils.py  gmaker.py  rmaker.py
Bad_Alexa_Bot/: Whomp_Sound-Z1T73Vg4juk.m4a
GnuWolf/: gnuwolf.py  gnuwolfutil.py
Greeter Bot/: Greedo_Going_Somewhere_Solo_-_Oonta_Goota_Solo_Star_Wars_-_Episode_IV_-_A_new_hope-X42fU3ZINME.m4a  greeto.py
Hunter Bot/: README.md  bot_gen_utils.py  config.py  hunter_bot.py  main.py
Hunter Bot/cogs/: cmdutils.py  hunter_bot.py
Hunter_Bot_Mk_II/: README.md  hunter_bot_mk_2.py  invite.txt
Impersonator Bot/: README.md  bot_gen_utils.py  botaudioutils.py  main.py
Impersonator Bot/cogs/: cmdutils.py  impersonator.py
Missing Ping Bot/: HOT_LAVA_Rescue_Mission_Saving_Baby_Dino_Eggs_on_pirate_island_new_Adleys_PlaySpace_App_review-cdxyzpFogwg.webm.part  Synchronized_Cats-7utuuiw7v0U.m4a  World_s_smallest_cat_-_BBC-W86cTIoMv2U.m4a  bot_gen_utils.py  missing_ping_bot.py
Old/: README  README.md
SKWIM Bot/: skwim_bot.py
Unfinished/: README  README.md
Unfinished/rust_bot/: Cargo.toml
Unfinished/rust_bot/src/: main.rs
Unfinished/rust_bot/src/commands/: meta.rs  mod.rs  reminder.rs  set_reminder.rs
Vote Kicker/: README.md  bot_gen_utils.py  config.py  vote_kicker.py  vote_kicker_py.py
reminder_bot/: README.md
(+36 files in other folders)
