[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
chrono = "0.4.29"
async-timer = "0.7.4"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]